--- a/src/main/resources/jeesite.properties
+++ b/src/main/resources/jeesite.properties
@@ -12,7 +12,7 @@
 #mysql database setting
 jdbc.type=mysql
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/jeesite?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://localhost:3306/campus_ip?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
 jdbc.password=123456
 
@@ -41,7 +41,7 @@ redis.port=6379
 #============================#
 
 #\u4ea7\u54c1\u4fe1\u606f\u8bbe\u7f6e
-productName=JeeSite \u5feb\u901f\u5f00\u53d1\u5e73\u53f0
+productName=\u6821\u533aip\u67e5\u8be2\u5de5\u5177
 copyrightYear=2014
 version=V1.2.6
 
