--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -12,6 +12,9 @@ log4j.appender.RollingFile.File=../logs/jeesite/jeesite.log
 log4j.appender.RollingFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.RollingFile.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n
 
+log4j.logger.cn.bdqn.dao=debug 
+
+
 #log4j.logger.java.sql=DEBUG
 
 #Springframework level
