--- a/src/main/resources/jeesite.properties
+++ b/src/main/resources/jeesite.properties
@@ -19,7 +19,7 @@
 
 jdbc.type=mysql
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:5306/campus_ip?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://10.202.192.55:5306/campus_ip?useUnicode=true&characterEncoding=utf-8
 jdbc.username=admin
 jdbc.password=admin@4400!
 
