--- a/src/main/resources/jeesite.properties
+++ b/src/main/resources/jeesite.properties
@@ -10,18 +10,18 @@
 #jdbc.password=123456
 
 #mysql database setting
-jdbc.type=mysql
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/campus_ip?useUnicode=true&characterEncoding=utf-8
-jdbc.username=root
-jdbc.password=123456
-
-
 #jdbc.type=mysql
 #jdbc.driver=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://10.202.192.55:5306/campus_ip?useUnicode=true&characterEncoding=utf-8
-#jdbc.username=admin
-#jdbc.password=admin@4400!
+#jdbc.url=jdbc:mysql://localhost:3306/campus_ip?useUnicode=true&characterEncoding=utf-8
+#jdbc.username=root
+#jdbc.password=123456
+
+
+jdbc.type=mysql
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://10.202.192.55:5306/campus_ip?useUnicode=true&characterEncoding=utf-8
+jdbc.username=admin
+jdbc.password=admin@4400!
 
 #mssql database settings
 #jdbc.type=mssql
